# linovelib-scraper

./: .gitignore  BiliNovel-Download.bat  README.md  index.html  package-lock.json  package.json  requirements-build.txt  requirements.txt  shelf_dump.json  tsconfig.json  vite.config.ts
.playwright-cli/: page-2026-07-22T19-20-21-894Z.yml  page-2026-07-22T19-25-50-886Z.yml
backend/: browser_utils.py  router_utils.py  server.py
backend/bilimanga/: Downloader.py  Editer.py  bilimanga_router.py  utils.py
backend/bilinovel/: Editer.py  bilinovel_router.py  utils.py
docs/superpowers/plans/: 2026-07-14-close-headless-browser.md
docs/superpowers/specs/: 2026-07-14-close-headless-browser-design.md
scripts/: build-sidecar.ps1
server/: app.py
server/bilinovel/: Editer.py  bilinovel_router.py  epub_packer.py  utils.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Downloader.tsx  Reader.tsx  Settings.tsx  Shelf.tsx
src/utils/: i18n.ts
tests/: test_browser_lifecycle.py  test_browser_profiles.py  test_chapter_content.py  test_epub_packer.py  test_shelf_paths.py
